--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">QuizTeste</string>
     <string name="titulo">Titulo</string>
+    <string name="responder">Responder</string>
+    <string name="voltar">Voltar</string>
 </resources>
